--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -88,7 +88,7 @@
           Fullerton. In my time between classes I sold shoes at Finishline where I acquired a taste for rare sneakers. The limited
           edition pairs I wanted were selling out instantly to buyers that had developed automated checkout software. It was my
           interest in understanding how they were built. Using this software initially sparked my desire to learn how
-          to code. After completing a Python course post graduation I was hooked. I decided to pursue web development by attending
+          to code. After completing a Python course post graduation, I was hooked. I decided to pursue web development by attending
           LearningFuze coding bootcamp. The rest is history.</p>
           <!-- <p>My name is Blake Ros and I love to code! Like most young kids I always loved to play video games but never thought I was smart enough to build the games that I enjoyed as a kid. While attending Cal State Fullerton I worked at Finishline and I quickly acquired a taste for rare sneakers which were always released online. I was exposed to automated checkout software which initially sparked my interest in software development. After completing a Python course post graduation I was hooked. I decided to pursue web development by attending LearningFuze coding bootcamp. The rest is history.</p> -->
         </div>
@@ -107,7 +107,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> <a href="tel:+19493705202">(949) 370-5202</a></li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> <a href="mailto:blakerosdodger@yahoo.com">blakerosdodger@yahoo.com</a></li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> <br><a href="mailto:blakerosdodger@yahoo.com">&emsp;&ensp;&nbsp;blakerosdodger@yahoo.com</a></li>
                   <li><i class="icofont-rounded-right"></i> <strong>Education:</strong> LearningFuze Graduate</li>
                 </ul>
               </div>
@@ -257,7 +257,7 @@
             <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Blake Ros</h4>
-              <p><em>Full Stack Web Developer with a background in React, JavaScript, Node.js, and Postgresql</em></p>
+              <p><em>Full Stack Web Developer with a background in React, JavaScript, Node.js, and PostgreSQL</em></p>
               <ul>
                 <li>Orange County, CA</li>
                 <li>(949) 370-5202</li>
@@ -270,13 +270,19 @@
               <h4>Bachelor's Degree, Business-Marketing</h4>
               <!-- <h5>2015 - 2016</h5> -->
               <p><em>Cal State University of Fullerton, Fullerton, CA</em></p>
-              <p>Concentrated on group projects and marketing skills. Developed strong communication and sales skills.</p>
+              <ul>
+                <li>Concentrated on group projects and marketing skills. Developed strong communication and sales skills</li>
+              </ul>
             </div>
             <div class="resume-item">
               <h4>LearningFuze</h4>
               <!-- <h5>2010 - 2014</h5> -->
-              <p><em>LearningFuze Coding Bootcamp, Irvine, CA</em></p>
-              <p>70+ hours of programming per week for a total of 800+ hours of programming in a simulated work environment with project deadlines and mentorship from senior developers</p>
+              <p><em>Accelerated Web Development Program, Irvine, CA</em></p>
+              <ul>
+                <li>70+ hours of programming per week for a total of 800+ hours of programming in a simulated work environment with project
+                deadlines and mentorship from senior developers</li>
+              </ul>
+              <!-- <p>70+ hours of programming per week for a total of 800+ hours of programming in a simulated work environment with project deadlines and mentorship from senior developers</p> -->
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
@@ -286,9 +292,12 @@
               <h5>2015 - Present</h5>
               <p><em>Shells and Fish Import and Export, Orange County, CA</em></p>
               <ul>
-                <li>Concentrated on generating new business lead by cold-calling and networking at annual seafood trade show in Boston</li>
-                <li>Manage customer relationships by sending current offers on product availability and update customers on market trends</li>
-                <li>Manage current inventories of product by generating advertisements for large inventory positions to reduce overall inventory</li>
+                <li>Concentrate on generating new business leads by cold-calling and networking at annual seafood
+                trade show in Boston</li>
+                <li>Manage customer relationships by sending current offers on product availability and update
+                customers on market trends</li>
+                <li>Manage current inventories of product by generating advertisements for large inventory positions to reduce overall
+                inventory</li>
                 <!-- <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li> -->
               </ul>
             </div>
@@ -364,7 +373,9 @@
               </div>
             </div>
             <div class="center pt-3"><b>Roommates</b></div>
-            <div class="summary pt-3">This project is under construction!</div>
+            <!-- <div class="summary pt-3">This project is under construction!</div> -->
+            <div class="summary pt-3">A full-stack web application that helps users organize items in a shared fridge</div>
+            <!-- <b><small class="summary pt-3">This project is under construction</small></b> -->
           </div>
 
           <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-card">
@@ -466,12 +477,12 @@
             <!-- <h4 class="title"><a href="">Magni Dolores</a></h4>
             <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p> -->
           </div>
-          <div class="col-lg-3 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
+          <!-- <div class="col-lg-3 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
             <div class="center applicationsFont">Express</div>
-            <img alt="Express Icon" src="assets/img/portfolio/express.svg">
+            <img alt="Express Icon" src="assets/img/portfolio/express.svg"> -->
             <!-- <h4 class="title"><a href="">Nemo Enim</a></h4>
             <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p> -->
-          </div>
+          <!-- </div> -->
           <div class="col-lg-3 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
             <div class="center applicationsFont">Postgresql</div>
             <img alt="Postgresql Icon" src="assets/img/portfolio/postgresql.svg">
