--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -288,7 +288,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Part-Time Developer</h4>
+              <h4>Software Engineer</h4>
               <h5>May 2020 - Present</h5>
               <p><em>Mindstill, LLC</em></p>
               <ul>
