--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -48,7 +48,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="./headshot.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="./profilePhoto.JPG" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Blake Ros</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://github.com/blake-ros" class="twitter" target="_blank" title="GitHub"><i class="bx bxl-github"></i></a>
@@ -101,7 +101,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="./headshot.jpg" class="img-fluid" alt="">
+            <img src="./profilePhoto.JPG" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Web Developer</h3>
