--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -12,7 +12,7 @@
   <meta property="og:image" content="https://www.blakeros.com/background-image.png">
   <meta property="og:image:width" content="180">
   <meta property="og:image:height" content="110">
-  <meta property="og:description" content="Blake Ros, Full Stack Developer">
+  <meta property="og:description" content="Blake Ros, Software Engineer">
   <meta property="og:url" content="https://www.blakeros.com">
 
   <!-- Favicons -->
