--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -8,9 +8,11 @@
   <title>Blake Ros</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
-  <meta property="og:title" content="Portfolio Website">
+  <meta property="og:title" content="Blake's Portfolio Website">
   <meta property="og:image" content="https://www.blakeros.com/portfolio-photo.jpg">
-  <meta property="og:description" content="Blake Ros, Software Engineer">
+  <meta property="og:image:width" content="180">
+  <meta property="og:image:height" content="110">
+  <meta property="og:description" content="Blake Ros | Software Engineer">
   <meta property="og:url" content="https://www.blakeros.com">
 
   <!-- Favicons -->
