--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -4,16 +4,16 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Blake Ros</title>
-  <meta content="" name="descriptison">
-  <meta content="" name="keywords">
   <meta property="og:title" content="Blake's Portfolio Website">
   <meta property="og:image" content="https://www.blakeros.com/portfolio-photo.jpg">
   <meta property="og:image:width" content="180">
   <meta property="og:image:height" content="110">
   <meta property="og:description" content="Blake Ros | Software Engineer">
   <meta property="og:url" content="https://www.blakeros.com">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="description" content="Blake Ros | Software Engineer">
 
   <!-- Favicons -->
   <link href="assets/img/favicon-blake.ico" rel="icon">
