--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Blake Ros</title>
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta property="og:title" content="Blake's Portfolio Website">
-  <meta property="og:image" content="https://www.blakeros.com/portfolio-photo.jpg">
+  <meta property="og:image" content="https://blakeros.com/portfolio-photo.jpg">
   <meta property="og:image:width" content="180">
   <meta property="og:image:height" content="110">
   <meta property="og:description" content="Blake Ros | Software Engineer">
