--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -11,7 +11,7 @@
   <meta property="og:image:width" content="180">
   <meta property="og:image:height" content="110">
   <meta property="og:description" content="Blake Ros | Software Engineer">
-  <meta property="og:url" content="https://www.blakeros.com">
+  <meta property="og:url" content="https://blakeros.com">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="description" content="Blake Ros | Software Engineer">
 
